[metadata]
name = ascimage
author = fallnjump
author_email = tfjsm.app@gmail.com
version = attr: ascimage.__version__
license = LICENSE
description = imageprint with asciii code.
long_description = file: README.md

[options]
packages = find:
include_package_data=True
install_requires =
    numpy

#[options.extras_require]
#develop =
#    

[options.entry_points]
console_scripts =
    imprint = ascimage:imprint_cmd


